--- a/PastaCSS/style.css
+++ b/PastaCSS/style.css
@@ -1,69 +1,3 @@
-#firstBox{
-    border: 4px rgb(0, 0, 0) solid;
-    border-radius: 5px;
-    margin: 0;
-}
-
-#logomarca{
-    position: relative;
-    width: 20px;
-    height: 20px;
-    padding: 10px;
-    margin-right: 20px;
-}
-
-#search{
-    position: relative;
-    height: 30px;
-    width: 200px;
-    margin: 0;
-    margin-left: 20px;
-    bottom: 10px;
-}
-
-#voltar{
-    position: relative;
-    margin-left: 940px;
-    bottom: 7px;
-    width: 100px;
-    background: linear-gradient(to bottom right, #00000056, #000000);
-    border: 0;
-    border-radius: 12px;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 2.5;
-    outline: transparent;
-    padding: 0 1rem;
-    text-align: center;
-    text-decoration: none;
-    transition: box-shadow .2s ease-in-out;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-}
-
-#voltar:not([disabled]):hover {
-  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
-}
-
-.body{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
-    background-color: #000;
-
-
-
-}
 .videobackground { 
     object-fit: cover;
     height: 100%;
@@ -75,7 +9,6 @@
     transform: scale(0.5);  
     opacity: 0.9;  
 }
-
 
 .Logo {
     max-width: 100%;
@@ -100,24 +33,22 @@
     background-color: #000000;
     font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     transition: box-shadow .2s ease-in-out;
-    
 }
 
 .animated-heading {
     position: relative;
-    top: 250px;
+    top: 260px;
     left: 100px;
     animation: slideRight 2s ease infinite alternate; 
     font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+    max-width: calc(100% - 100px);
   }
   
   @keyframes slideRight {
     0% {
       transform: translateX(0);
     }
-    100% {
-      transform: translateX(100px); /* Ou qualquer valor desejado */
+    80% {
+      transform: translateX(30px); /* Ou qualquer valor desejado */
     }
   }
-
- 
