--- a/Code/PastaCSS/style.css
+++ b/Code/PastaCSS/style.css
@@ -10,7 +10,7 @@
     opacity: 0.9;  
 }
 
-.Logo {
+.Logocustom {
     max-width: 100%;
     height: auto;
     position: absolute;
@@ -53,3 +53,9 @@
     }
   }
 
+.custom-div{
+  display: flex; 
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+}
